pygrass: rm get_msgr from modules to avoid the ctypes use
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65336 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/python/pygrass/modules/interface/Makefile
+++ b/lib/python/pygrass/modules/interface/Makefile
@@ -9,7 +9,7 @@ GDIR = $(PYDIR)/grass
 PGDIR = $(GDIR)/pygrass
 DSTDIR= $(PGDIR)/modules/interface
 
-MODULES = docstring read typedict flag parameter module
+MODULES = docstring read typedict flag parameter module env
 
 PYFILES := $(patsubst %,$(DSTDIR)/%.py,$(MODULES) __init__)
 PYCFILES := $(patsubst %,$(DSTDIR)/%.pyc,$(MODULES) __init__)
