pythonlib: use .py extension for python files
The tmp file is now directly in the source directory and deleted with make clean.

This should enable autogenerating documentation from setup.py even when GRASS was not compiled. It also contributes to better editing.


git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65345 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/python/script/Makefile
+++ b/lib/python/script/Makefile
@@ -18,10 +18,12 @@ $(DSTDIR):
 $(DSTDIR)/%: % | $(DSTDIR)
 	$(INSTALL_DATA) $< $@
 
-$(DSTDIR)/setup.py: $(OBJDIR)/setup.py | $(DSTDIR)
+EXTRA_CLEAN_FILES = setup.tmp.py
+
+$(DSTDIR)/setup.py: setup.tmp.py | $(DSTDIR)
 	$(INSTALL_DATA) $< $@
 
-$(OBJDIR)/setup.py: setup.py.sed | $(OBJDIR)
+setup.tmp.py: setup.py
 	sed \
 	-e 's#@LD_LIBRARY_PATH_VAR@#$(LD_LIBRARY_PATH_VAR)#' \
 	$< > $@
