pythonlib: use non-py extension for tmp file (https://trac.osgeo.org/grass/changeset/65345) to avoid picking of the file by autodoc, fix syntax in https://trac.osgeo.org/grass/changeset/65346
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65429 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/python/script/Makefile
+++ b/lib/python/script/Makefile
@@ -18,12 +18,12 @@ $(DSTDIR):
 $(DSTDIR)/%: % | $(DSTDIR)
 	$(INSTALL_DATA) $< $@
 
-EXTRA_CLEAN_FILES = setup.tmp.py
+EXTRA_CLEAN_FILES = setup.py.tmp
 
-$(DSTDIR)/setup.py: setup.tmp.py | $(DSTDIR)
+$(DSTDIR)/setup.py: setup.py.tmp | $(DSTDIR)
 	$(INSTALL_DATA) $< $@
 
-setup.tmp.py: setup.py
+setup.py.tmp: setup.py
 	sed \
 	-e 's#@LD_LIBRARY_PATH_VAR@#$(LD_LIBRARY_PATH_VAR)#' \
 	$< > $@
