specify notifications for Travis CI
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65671 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/.travis.yml
+++ b/.travis.yml
@@ -83,5 +83,8 @@ script:
 
 notifications:
         email:
+            recipients:
                 - landa.martin@gmail.com
                 - wenzeslaus@gmail.com
+            on_success: change
+            on_failure: always
