add grass-dev list to Travis CI recipients
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65709 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/.travis.yml
+++ b/.travis.yml
@@ -84,6 +84,7 @@ script:
 notifications:
         email:
             recipients:
+                - grass-dev@lists.osgeo.org
                 - landa.martin@gmail.com
                 - wenzeslaus@gmail.com
             on_success: change
