grass.desktop: add version number (trac https://trac.osgeo.org/grass/ticket/2777)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66865 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/gui/icons/grass.desktop
+++ b/gui/icons/grass.desktop
@@ -48,6 +48,6 @@ Comment[uk]=Геоінформаційна система
 Comment[uz]=Geografik axborot tizimi
 Categories=Education;Science;Geoscience;Geography;
 Exec=grass71
-Icon=grass
+Icon=grass71
 Terminal=true
 Keywords=wms;wfs;ogc;osgeo;gis;
