--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -21,7 +21,7 @@ SUBDIRS = \
 	g.extension \
 	g.extension.all \
 	g.manual \
-	g.search.module \
+	g.search.modules \
 	i.colors.enhance \
 	i.image.mosaic \
 	i.in.spotvgt \
