fix nad2bin logic
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67029 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/proj/Makefile
+++ b/lib/proj/Makefile
@@ -41,7 +41,7 @@ $(FTOL_OBJ): $(OBJDIR)/ftol.o
 endif
 
 $(NAD_DSTFILES): $(NAD_DIR)/%: %.lla | $(NAD_DIR)
-	$(NAD2BIN) < $< $@
+	$(NAD2BIN) $@ < $< 
 
 $(NT_DSTFILES): $(NAD_DIR)/%: % | $(NAD_DIR)
 	$(INSTALL_DATA) $< $@
