r.in.lidar: vector output with grid-based decimation [news]
Creates one point per raster cell. Point gets
XYZ which are mean of all points in the cell.
No categories are created or preserved as it
would be unclear what to take (we cannot average
retrun number).

Some improvements are needed for history and done
message code. Vector writting could be more separated.


git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67210 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.in.lidar/Makefile
+++ b/raster/r.in.lidar/Makefile
@@ -2,15 +2,14 @@ MODULE_TOPDIR = ../..
 
 PGM = r.in.lidar
 
-LIBES = $(RASTERLIB) $(GISLIB) $(MATHLIB) $(GPROJLIB) $(LASLIBS) $(SEGMENTLIB)
-DEPENDENCIES = $(RASTERDEP) $(GISDEP) $(SEGMENTDEP)
+LIBES = $(RASTERLIB) $(GISLIB) $(MATHLIB) $(GPROJLIB) $(LASLIBS) $(SEGMENTLIB) $(VECTORLIB)
+DEPENDENCIES = $(RASTERDEP) $(GISDEP) $(SEGMENTDEP) $(VECTORDEP)
 
-EXTRA_INC = $(PROJINC) $(LASINC)
-EXTRA_CFLAGS = $(GDALCFLAGS)
+EXTRA_INC = $(LASINC) $(VECT_INC) $(PROJINC)
+EXTRA_CFLAGS = $(VECT_CFLAGS) $(GDALCFLAGS)
 
 include $(MODULE_TOPDIR)/include/Make/Module.make
 
 ifneq ($(USE_LIBLAS),)
 default: cmd
 endif
-
