use -Werror=implicit-function-declaration for Travis CI
Alternative would be
before_script:
    - export CFLAGS=...


git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67999 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,10 @@ install:
                 liblapack-dev
                 python-numpy
 
+env:
+  global:
+    - CFLAGS="-Werror=implicit-function-declaration"
+
 script:
         - ./configure --host=x86_64-linux-gnu --build=x86_64-linux-gnu
                 --prefix=/usr/lib
