wingrass: update setup.hint by build system
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68538 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/Makefile
+++ b/mswindows/Makefile
@@ -1,6 +1,9 @@
 MODULE_TOPDIR = ..
 
-include $(MODULE_TOPDIR)/include/Make/Other.make
+SUBDIRS = \
+	osgeo4w
+
+include $(MODULE_TOPDIR)/include/Make/Dir.make
 
 EXTRA_CLEAN_FILES = GRASS-Packager.bat GRASS-Installer.nsi
 
