fix wingrass: update setup.hint by build system
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68539 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/Makefile
+++ b/mswindows/Makefile
@@ -8,7 +8,7 @@ include $(MODULE_TOPDIR)/include/Make/Dir.make
 EXTRA_CLEAN_FILES = GRASS-Packager.bat GRASS-Installer.nsi
 
 ifneq ($(MINGW),)
-default: GRASS-Packager.bat GRASS-Installer.nsi
+default: GRASS-Packager.bat GRASS-Installer.nsi parsubdirs
 else
 default:
 endif	
