libproj: Makefile updated for new ntf_r93.gsb (trac https://trac.osgeo.org/grass/ticket/1219)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68655 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/proj/Makefile
+++ b/lib/proj/Makefile
@@ -14,7 +14,7 @@ EXTRA_INC = $(PROJINC)
 
 NAD_TABLES := $(wildcard *.lla)
 
-NT_TABLES = ntv1_can.dat nzgd2kgrid0005.gsb
+NT_TABLES = ntv1_can.dat ntf_r93.gsb nzgd2kgrid0005.gsb
 
 PROJ_DIR = $(ETC)/proj
 NAD_DIR  = $(ETC)/proj/nad
