travis CI: add Notifications from travis (contributed by rkrug, https://github.com/GRASS-GIS/grass-ci/pull/2)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68656 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,14 @@ install:
 script:
   - ./.travis/.travis.$TRAVIS_OS_NAME.script.sh
 
-## Notifications:
-##         email:
-##             recipients:
-##                 - grass-dev@lists.osgeo.org
-##                 - landa.martin@gmail.com
-##                 - wenzeslaus@gmail.com
-##                 - rainer@krugs.de
-##             on_success: change
-##             on_failure: always
+notifications:
+        email:
+            recipients:
+                - grass-dev@lists.osgeo.org
+                - landa.martin@gmail.com
+                - wenzeslaus@gmail.com
+            on_success: change
+            on_failure: always
 
 
 ## TODO Change so that the .travis.yml files are in one repo and the
